<resources>
    <string name="app_name">AutoCron</string>
    <string name="title_automations">Automations</string>
    <string name="title_states">States</string>
    <string name="title_events">Events</string>
    <string name="title_edit_automation">Edit Automation</string>
    <string name="title_activity_edit_component">Edit %1$s</string>
    <string name="title_component_context_menu">Automation Menu</string>
    <string name="title_automation_settings">Settings</string>
    <string name="title_automation_rules">Rules</string>
    <string name="title_automation_actions">Actions</string>
    <string name="title_automation_triggers">Triggers</string>
    <string name="title_choose_type">Choose a type of %1$s to add.</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_component">Add new %1$s</string>
    <string name="action_edit_component">Edit %1$s</string>
    <string name="action_delete_component">Delete %1$s</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="test_action_title">Test Action</string>
    <string name="test_action_description">This is a simple test action that just displays a toast notification on screen whenever it activates or deactivates. You can use this to test your state\'s rules.</string>
    <string name="ringer_mode_action_title">Ringer Mode Action</string>
    <string name="ringer_mode_action_description">This action changes the device\'s ringer mode to either mute or vibrate.</string>
    <string name="send_sms_action_title">Text Message Action</string>
    <string name="send_sms_action_description">This action sends a text message.</string>
    <string name="ongoing_notification_action_title">Ongoing Notification Action</string>
    <string name="ongoing_notification_action_description">An action that displays a notification while it is active and hides the notification when it deactivates.</string>
    <string name="trigger_notification_action_title">Triggered Notification Action</string>
    <string name="trigger_notification_action_description">An action that displays a notification when it is triggered.</string>
    <string name="custom_rule_action_title">Custom Rule Action</string>
    <string name="custom_rule_action_description">An action that changes the state of all of the custom rules that have a given ID.</string>
    <string name="custom_trigger_action_title">Custom Trigger Action</string>
    <string name="custom_trigger_action_description">An action that triggers all of the custom triggers with a given ID.</string>
    <string name="test_rule_title">Test Rule</string>
    <string name="test_rule_description">This is a simple test rule that displays a notification that you can click on to activate and deactivate the rule. You can use this rule for testing an state\'s actions.</string>
    <string name="location_rule_title">Location Rule</string>
    <string name="location_rule_description">A rule that activates when the device is in a certain location.</string>
    <string name="time_range_rule_title">Time Range Rule</string>
    <string name="time_range_rule_description">A rule that activates every day between the two given times.</string>
    <string name="weekday_rule_title">Week Day Rule</string>
    <string name="weekday_rule_description">A rule that activates only on certain days of the week.</string>
    <string name="wifi_rule_title">Wi-Fi Rule</string>
    <string name="wifi_rule_description">A rule that activates based on your current Wi-Fi network.</string>
    <string name="nfc_rule_title">NFC Rule</string>
    <string name="nfc_rule_description">A rule that activates when an NFC tag is discovered that contains this rule\'s ID.</string>
    <string name="custom_rule_title">Custom Rule</string>
    <string name="custom_rule_description">A custom rule that can be activated and deactivated by a custom rule action.</string>
    <string name="test_trigger_title">Test Trigger</string>
    <string name="test_trigger_description">A simple trigger that shows a notification that can be tapped to trigger its event.</string>
    <string name="custom_trigger_title">Custom Trigger</string>
    <string name="custom_trigger_description">A trigger that can be set off by a custom trigger action.</string>
    <string name="component_no_description">No description set.</string>
    <string name="component_list_empty_text">Click the \"Add new %1$s\" button in the top right corner to add a new %1$s.</string>
    <string name="notification_title_test_rule">Test rule \"%1$s\"</string>
    <string name="notification_text_test_rule">Tap to %2$s test rule \"%1$s\".</string>
    <string name="notification_title_test_trigger">Test trigger \"%1$s\"</string>
    <string name="notification_text_test_trigger">Tap to test trigger \"%1$s\".</string>
    <string name="pref_title_name_and_desc">Name &amp; Description</string>
    <string name="pref_automation_name_title">Name</string>
    <string name="pref_automation_name_summary">A short name for the state.</string>
    <string name="pref_automation_name_dialog_title">Enter a name for this state.</string>
    <string name="pref_automation_desc_title">Description</string>
    <string name="pref_automation_desc_summary">A short description explaining what this state does.</string>
    <string name="pref_automation_desc_dialog_title">Enter a description for this state.</string>
    <string name="pref_component_generic_info">General Information</string>
    <string name="pref_rule_desc_title">Description</string>
    <string name="pref_rule_desc_summary">A short description explaining what this rule does.</string>
    <string name="pref_rule_desc_dialog_title">Enter a description for this rule.</string>
    <string name="pref_action_desc_title">Description</string>
    <string name="pref_action_desc_summary">A short description explaining what this action does.</string>
    <string name="pref_action_desc_dialog_title">Enter a description for this action.</string>
    <string name="pref_trigger_desc_title">Description</string>
    <string name="pref_trigger_desc_summary">A short description explaining what this trigger does.</string>
    <string name="pref_trigger_desc_dialog_title">Enter a description for this trigger.</string>
    <string name="pref_title_activation_msg">Activation Message</string>
    <string name="pref_summary_activation_msg">Message to be displayed when the action is activated.</string>
    <string name="pref_dialog_title_activation_msg">Enter a message to show when the action is activated.</string>
    <string name="pref_default_test_action_activate">Test action activated.</string>
    <string name="pref_title_deactivation_msg">Deactivation Message</string>
    <string name="pref_summary_deactivation_msg">Message to be displayed when the action is deactivated.</string>
    <string name="pref_dialog_title_deactivation_msg">Enter a message to show when the action is deactivated.</string>
    <string name="pref_default_test_action_deactivate">Test action deactivated.</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_latitude_title">Latitude</string>
    <string name="pref_latitude_summary">The latitude of the center of the location\'s radius.</string>
    <string name="pref_latitude_dialog_title">Enter the latitude of the area\'s center.</string>
    <string name="pref_longitude_title">Longitude</string>
    <string name="pref_longitude_summary">The longitude of the center of the location\'s radius.</string>
    <string name="pref_longitude_dialog_title">Enter the longitude of the area\'s center.</string>
    <string name="pref_radius_title">Radius</string>
    <string name="pref_radius_summary">The location\'s radius.</string>
    <string name="pref_radius_dialog_title">Enter the radius of the area.</string>
    <string name="pref_title_time_range">Time Range</string>
    <string name="pref_title_time_range_start">Start Time</string>
    <string name="pref_summary_time_range_start">The time at which this rule will activate.</string>
    <string name="pref_title_time_range_end">End Time</string>
    <string name="pref_summary_time_range_end">The time at which this rule will deactivate.</string>
    <string name="pref_title_ringer_modes_category">Ringer Mode</string>
    <string name="pref_title_activate_mode">Mode</string>
    <string name="pref_summary_activate_mode">The ringer mode to set when this action is triggered.</string>
    <string-array name="pref_ringer_mode_entry_titles">
        <item>Normal</item>
        <item>Vibrate</item>
        <item>Silent</item>
    </string-array>
    <string name="pref_title_sms_category">Message</string>
    <string name="pref_title_sms_destination">Send To</string>
    <string name="pref_summary_sms_destination">The phone number to send the text message to.</string>
    <string name="pref_title_sms_content">Message Content</string>
    <string name="pref_summary_sms_content">The content of the message to send.</string>
    <string name="pref_notification_category_title">Notification</string>
    <string name="pref_notification_action_title_title">Notification Title</string>
    <string name="pref_notification_action_title_summary">The title for this action\'s notification.</string>
    <string name="pref_notification_action_title_default">Notification</string>
    <string name="pref_notification_action_text_title">Notification Text</string>
    <string name="pref_notification_action_text_summary">The body text to show for this action\'s notification.</string>
    <string name="pref_notification_action_text_default">Notification action activated!</string>
    <string name="pref_title_weekday_rule_category">Weekday</string>
    <string name="pref_title_weekday">Active Weekdays</string>
    <string name="pref_summary_weekday">Which week days this rule is active on.</string>
    <string-array name="pref_weekday_entry_titles">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="pref_title_wifi_category">Wi-Fi</string>
    <string name="pref_title_wifi_ssid">Network SSID</string>
    <string name="pref_summary_wifi_ssid">The SSID of the Wi-Fi network that activates this rule.</string>
    <string name="pref_dialog_msg_wifi_ssid">Enter the SSID of the Wi-Fi network that should activate this rule. Leave this blank for any network.</string>
    <string name="pref_title_rule_settings">Rule Settings</string>
    <string name="pref_title_rule_inverted">Invert Rule</string>
    <string name="pref_summary_rule_inverted">Inverted rules activate their state when they are inactive and deactivate it when they are active.</string>
    <string name="pref_title_trigger">Trigger</string>
    <string name="pref_title_trigger_activate">Trigger on activate?</string>
    <string name="pref_summary_trigger_activate">If checked, this action will be executed when the state becomes activated.</string>
    <string name="pref_title_trigger_deactivate">Trigger on deactivate?</string>
    <string name="pref_summary_trigger_deactivate">If checked, this action will be executed when the state becomes deactivated.</string>
    <string name="pref_title_custom_rule_action_category">Custom Rule Action</string>
    <string name="pref_title_custom_rule_action_id">Custom Rule ID</string>
    <string name="pref_summary_custom_rule_action_id">The ID of the custom rule (or rules) that this action should change.</string>
    <string name="pref_title_custom_rule_action_state_change">Custom Rule State</string>
    <string name="pref_summary_custom_rule_action_state_change">Whether the custom rule should be activated, deactivated, or toggled.</string>
</resources>