<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Andrew Okin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ 	http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_title_sms_category">
        <EditTextPreference
                android:key="sms_destination"
                android:title="@string/pref_title_sms_destination"
                android:summary="@string/pref_summary_sms_destination"
                android:inputType="phone"
                />

        <EditTextPreference
                android:key="sms_content"
                android:title="@string/pref_title_sms_content"
                android:summary="@string/pref_summary_sms_content"
                android:maxLength="70"
                />
    </PreferenceCategory>
</PreferenceScreen>
